fix: netlify script cors

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -44,5 +44,7 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+<script
+  is:inline
+  src="https://identity.netlify.com/v1/netlify-identity-widget.js"
 ></script>
