--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -130,12 +130,15 @@ p {
 
 a {
   color: var(--color-1);
-}
-
-a:hover,
-a:focus {
   text-decoration: none;
 }
+
+time {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--color-text-3);
+}
+
 .page-container {
   min-height: 100vh;
 }
