feat: full blog layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,9 @@ const today = new Date();
     text-align: center;
   }
   p {
+    margin: 0;
     font-size: 18px;
+    max-width: none;
   }
   .mt {
     margin-top: 64px;
