--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -13,3 +13,11 @@
   font-display: swap;
   font-style: italic;
 }
+
+@font-face {
+  font-family: "FiraCode";
+  src: url(/fonts/FiraCode-VF.woff2) format(woff2);
+  font-weight: 300 900;
+  font-display: swap;
+  font-style: monospace;
+}
