--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -3,7 +3,7 @@
 :root {
 	/* Typography */
 	--font-sans: "Satoshi", sans-serif;
-  --font-mono: "JetBrains MonoVariable", monospace;
+  --font-mono: "FiraCode", monospace;
 
   --lineHeight-none: 1;
   --lineHeight-tight: 1.1;
@@ -69,7 +69,7 @@ h4,
 h5,
 h6 {
   margin-top: 48px;
-  margin-bottom: 24px;
+  margin-bottom: 0;
   line-height: var(--lineHeight-tight);
   color: var(--color-text-2);
 }
@@ -124,7 +124,7 @@ p {
   font-size: 16px;
   font-weight: 500;
   line-height: var(--lineHeight-relaxed);
-  margin: 0;
+  margin: 32px 0 0 0;
   padding: 0;
 }
 
@@ -139,6 +139,88 @@ time {
   color: var(--color-text-3);
 }
 
+/* Blog */
+ul {
+  margin: 24px 0 0 0;
+  font-size: 16px;
+  padding-left: 16px;
+}
+img {
+  max-height: 600px;
+  margin: 48px 0 32px 0;
+}
+pre {
+  margin: 48px 0 32px 0;
+  padding: var(--padding);
+  grid-column: full !important;
+  border-radius: 16px;
+}
+pre + p em {
+  display: block;
+  margin-top: -48px;
+  margin-bottom: 16px;
+}
+code {
+  font-size: 14px;
+  font-family: var(--font-mono);
+}
+blockquote {
+  grid-column: full !important;
+  width: 100%;
+  margin: 0;
+  color: var(--color-text-4);
+  padding: var(--padding);
+  border-left: 4px solid var(--color-1);
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 16px;
+  background: rgba(var(--color-1-rgb), 0.1);
+}
+
+blockquote > :last-child {
+  margin-bottom: 0;
+}
+
+blockquote > ul,
+blockquote > ol {
+  list-style-position: inside;
+}
+
+blockquote p {
+  margin: 0;
+  color: var(--color-text-cloud);
+}
+.post-title {
+  font-size: 24px;
+}
+.desc {
+  font-size: 18px;
+  line-height: var(--lineHeight-relaxed);
+}
+.dates-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 12px;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
+.updatedDate {
+  display: inline-block;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 8px 12px;
+  background: rgba(var(--color-1-rgb), 0.1);
+  color: var(--color-1);
+  border-radius: 6px;
+}
+.updatedDate * {
+  font-weight: 600;
+  color: var(--color-1);
+}
+
+/* Layout */
 .page-container {
   min-height: 100vh;
 }
@@ -195,5 +277,20 @@ time {
   :root {
     --padding: 32px;
     --radius: 32px;
+  }
+  .post-title {
+    font-size: 48px;
+  }
+  code {
+    font-size: 16px;
+  }
+  p {
+    font-size: 19px;
+  }
+  time {
+    font-size: 16px;
+  }
+  ul {
+    font-size: 18px;
   }
 }
