--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,56 +1,48 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header";
+import Page from "./Page.astro";
 
 export interface Props {
   content: {
     title: string;
     description: string;
-    pubDate?: string;
+    pubDate: string;
     updatedDate?: string;
-    heroImage?: string;
+    author: string;
   };
 }
 
 const {
-  content: { title, description, pubDate, updatedDate, heroImage },
+  content: { title, description, pubDate, updatedDate, author },
 } = Astro.props;
 ---
 
-<html lang="en">
-  <head>
-    <BaseHead title={title} description={description} />
-    <style>
-      .title {
-        font-size: 2em;
-        margin: 0.25em 0 0;
+<Page title="Blog">
+  <h1 class="post-title">{title}</h1>
+  <div class="dates-wrapper">
+    <time>
+      {
+        new Date(pubDate).toLocaleString("en-US", {
+          month: "long",
+          day: "numeric",
+          year: "numeric",
+        })
       }
-      hr {
-        border-top: 1px solid #ddd;
-        margin: 1rem 0;
-      }
-    </style>
-  </head>
-
-  <body>
-    <Header client:load activeTag="Blog" />
-    <main>
-      <article>
-        {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
-        <h1 class="title">{title}</h1>
-        {pubDate && <time>{pubDate}</time>}
-        {
-          updatedDate && (
-            <div>
-              Last updated on <time>{updatedDate}</time>
-            </div>
-          )
-        }
-        <hr />
-        <slot />
-      </article>
-    </main>
-    <Footer />
-  </body>
-</html>
+    </time>
+    {
+      updatedDate && (
+        <p class="updatedDate">
+          Updated:
+          <time>
+            {new Date(updatedDate).toLocaleString("en-US", {
+              month: "long",
+              day: "numeric",
+              year: "numeric",
+            })}
+          </time>
+        </p>
+      )
+    }
+  </div>
+  <p class="desc">{description}</p>
+  <slot />
+</Page>
