--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,6 +9,7 @@ const today = new Date();
 </footer>
 <style>
   footer {
+    margin-top: 32px;
     border-top: 2px solid var(--color-bg-dark);
     padding: 64px;
     text-align: center;
