--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const sortedPosts = posts
         website. Here you'll find my blog, prior work, and some relevant
         information. Enjoy!
       </p>
-      <button class="btn">My work</button>
+      <a href="/projects" class="btn">My work</a>
     </div>
     <Image
       alt="martin on vacation"
@@ -65,6 +65,7 @@ const sortedPosts = posts
   h1 {
     font-size: 58px;
     margin-left: -4px;
+    margin-bottom: 32px;
     display: inline-block;
     word-spacing: 100vw;
   }
@@ -74,7 +75,7 @@ const sortedPosts = posts
     padding: 0;
   }
 
-  button {
+  .btn {
     margin-top: 32px;
     width: 100%;
   }
