--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -17,6 +17,9 @@ const {
 ---
 
 <Page title="Blog">
+  <address class="author">
+    By <a rel="author" href="/about">{author}</a>
+  </address>
   <h1 class="post-title">{title}</h1>
   <div class="dates-wrapper">
     <time>
