fix: minor styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ const sortedPosts = posts
   h1 {
     font-size: 58px;
     margin-left: -4px;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
     display: inline-block;
     word-spacing: 100vw;
   }
@@ -106,6 +106,7 @@ const sortedPosts = posts
   .cta-content p {
     font-size: 18px;
     font-weight: 600;
+    line-height: 2;
   }
 
   .posts {
@@ -136,6 +137,10 @@ const sortedPosts = posts
 
     .cta-content {
       width: 50%;
+    }
+
+    .cta-content p {
+      font-size: 19px;
     }
 
     .cta {
