feat: add about page

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -3,6 +3,7 @@
 :root {
 	/* Typography */
 	--font-sans: "Satoshi", sans-serif;
+  --font-serif: "Butler", serif;
   --font-mono: "FiraCode", monospace;
 
   --lineHeight-none: 1;
