--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const sortedPosts = posts
     margin-left: -4px;
     display: inline-block;
     word-spacing: 100vw;
-    font-family: "Butler", serif;
+    font-family: var(--font-serif);
     font-weight: 300;
   }
 
@@ -113,7 +113,7 @@ const sortedPosts = posts
   }
 
   .posts {
-    margin-top: 64px;
+    margin-top: 80px;
   }
 
   .post {
