--- a/src/components/Parallax.module.css
+++ b/src/components/Parallax.module.css
@@ -4,7 +4,7 @@
     width: 30%;
     height: auto;
     position: absolute;
-    top: 5%;
+    top: 64px;
     right: 32px;
     aspect-ratio: 3.2 / 4;
     overflow: hidden;
