--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const sortedPosts = posts
         ))
       }
     </ul>
-    <a class="arrow-link" href="/blog">
+    <a class="arrow-link bottom-link" href="/blog">
       See all posts
       <Icon name="arrow_right" />
     </a>
@@ -63,6 +63,8 @@ const sortedPosts = posts
     word-spacing: 100vw;
     font-family: var(--font-serif);
     font-weight: 300;
+    animation: fadein 600ms;
+    position: relative;
   }
 
   ul {
@@ -134,6 +136,10 @@ const sortedPosts = posts
     margin-bottom: 8px;
   }
 
+  .bottom-link {
+    margin-top: 16px;
+  }
+
   @media (min-width: 600px) {
     h1 {
       margin-left: -8px;
@@ -163,6 +169,17 @@ const sortedPosts = posts
   @media (min-width: 920px) {
     h1 {
       word-spacing: initial;
+    }
+  }
+
+  @keyframes fadein {
+    from {
+      opacity: 0;
+      top: 32px;
+    }
+    to {
+      opacity: 1;
+      top: 0;
     }
   }
 </style>
