fix: add mastodon links

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,8 +14,20 @@ import Page from "../layouts/Page.astro";
   </p>
   <p>Other platforms you can find me on:</p>
   <ul>
-    <li><a class="arrow-link">Github<Icon name="chain" /></a></li>
-    <li><a class="arrow-link">Linkedin<Icon name="chain" /></a></li>
+    <li>
+      <a class="arrow-link" href="https://github.com/MartinRybergLaude"
+        >Github<Icon name="chain" /></a>
+    </li>
+    <li>
+      <a
+        class="arrow-link"
+        href="https://www.linkedin.com/in/martinryberglaude/"
+        >Linkedin<Icon name="chain" /></a>
+    </li>
+    <li>
+      <a rel="me" class="arrow-link" href="https://mastodon.green/@mrlaude"
+        >Mastodon<Icon name="chain" /></a>
+    </li>
   </ul>
   <p>I look forward to hearing from you!</p>
 </Page>
