--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,11 @@
 import Page from "../layouts/Page.astro";
 import { Icon } from "astro-icon";
 import { Parallax } from "../components/Parallax";
+import { getCollection } from "astro:content";
 
-const posts = await Astro.glob("./blog/*.{md,mdx}");
+const posts = await await getCollection("blog");
 const sortedPosts = posts
-  .sort(
-    (a, b) =>
-      new Date(b.frontmatter.pubDate).valueOf() -
-      new Date(a.frontmatter.pubDate).valueOf()
-  )
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
   .slice(0, 3);
 ---
 
@@ -32,11 +29,11 @@ const sortedPosts = posts
       {
         sortedPosts.map((post) => (
           <li>
-            <a href={`/blog/${post.frontmatter.slug}`}>
+            <a href={`/blog/${post.slug}`}>
               <article class="post">
-                <h3>{post.frontmatter.title}</h3>
-                <time datetime={post.frontmatter.pubDate}>
-                  {new Date(post.frontmatter.pubDate).toLocaleString("en-US", {
+                <h3>{post.data.title}</h3>
+                <time datetime={post.data.pubDate.toISOString()}>
+                  {new Date(post.data.pubDate).toLocaleString("en-US", {
                     month: "long",
                     day: "numeric",
                     year: "numeric",
