feat: convert all imgs to webp

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ import Page from "../layouts/Page.astro";
   <p>Here are some of my solo projects.</p>
   <ul>
     <li>
-      <Image src="/images/solsken.png" width={128} height={128} alt="" />
+      <Image src="/images/solsken.webp" width={128} height={128} alt="" />
       <div>
         <h2>Solsken</h2>
         <p>Accessible and detailed weather globally.</p>
