--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,15 +1,14 @@
 ---
-import { Image } from "@astrojs/image/components";
 import Icon from "astro-icon";
 import Page from "../layouts/Page.astro";
 ---
 
 <Page title="Projects">
   <h1>My projects</h1>
-  <p>Here are some of my solo projects.</p>
+  <p>Here are some of my projects with related information.</p>
   <ul>
     <li>
-      <Image src="/images/solsken.webp" width={128} height={128} alt="" />
+      <img src="/images/solsken.webp" width={128} height={128} alt="" />
       <div>
         <h2>Solsken</h2>
         <p>Accessible and detailed weather globally.</p>
@@ -17,9 +16,71 @@ import Page from "../layouts/Page.astro";
           <a class="arrow-link" href="https://solsken.app" target="_blank"
             >Live<Icon name="chain" /></a
           >
-          <spam class="dot">•</spam>
+          <span class="dot">•</span>
           <a class="arrow-link" href="/blog/solsken-app"
             >Blog post<Icon name="chain" /></a
+          >
+          <span class="dot">•</span>
+          <a
+            class="arrow-link"
+            href="https://github.com/MartinRybergLaude/Solsken"
+            >Source<Icon name="chain" /></a
+          >
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="/images/gamesquad.webp" width={128} height={128} alt="" />
+      <div>
+        <h2>GameSquad</h2>
+        <p>Squad up and vote for what game to play.</p>
+        <div class="links">
+          <a class="arrow-link" href="https://gamesquad.win" target="_blank"
+            >Live<Icon name="chain" /></a
+          >
+          <span class="dot">•</span>
+          <a class="arrow-link" href="/blog/gamesquad-app"
+            >Blog post<Icon name="chain" /></a
+          >
+          <span class="dot">•</span>
+          <a
+            class="arrow-link"
+            href="https://github.com/MartinRybergLaude/GameSquad"
+            >Source<Icon name="chain" /></a
+          >
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="/images/avodoro.webp" width={128} height={128} alt="" />
+      <div>
+        <h2>Avodoro</h2>
+        <p>Lightweight offline-ready pomodoro timer.</p>
+        <div class="links">
+          <a
+            class="arrow-link"
+            href="https://avodoro.mrlaude.com"
+            target="_blank">Live<Icon name="chain" /></a
+          >
+          <span class="dot">•</span>
+          <a
+            class="arrow-link"
+            href="https://github.com/MartinRybergLaude/Avodoro"
+            >Source<Icon name="chain" /></a
+          >
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="/images/quantum.webp" width={128} height={128} alt="" />
+      <div>
+        <h2>Quantum Snake</h2>
+        <p>Outrun theme, enemy A* powered snake, all running in the console.</p>
+        <div class="links">
+          <a
+            class="arrow-link"
+            href="https://github.com/MartinRybergLaude/QuantumSnakeConsole"
+            >Source<Icon name="chain" /></a
           >
         </div>
       </div>
@@ -53,6 +114,7 @@ import Page from "../layouts/Page.astro";
   }
   .links {
     margin-top: 8px;
+    user-select: none;
   }
 
   @media (min-width: 600px) {
