feat: add featured projects section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,6 +10,7 @@ const today = new Date();
 <style>
   footer {
     margin-top: 64px;
+    margin-inline: 48px;
     border-top: 2px solid var(--color-bg-dark);
     padding: 64px;
     text-align: center;
