--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,20 +4,18 @@ import Page from "../layouts/Page.astro";
 
 <Page title="About">
   <h1>About me</h1>
-  <p>
-    Greetings! I'm a Swedish <strong>frontend developer</strong> based in Stockholm.
-  </p>
+  <p>Greetings! I'm a Swedish frontend developer based in Stockholm.</p>
   <section>
     <h2>Skills</h2>
     <p>
-      I mostly work in Typescript and React, with frameworks such as Next.js to
-      cover advanced patterns when required. I also have experience with
-      Node.js, GraphQL, and a bit of Python.
+      I mostly work in Typescript using React, with frameworks such as Next.js
+      and Astro to cover a wide variety of site types. I also have experience
+      with Node.js, GraphQL, and a bit of Python.
     </p>
     <p>
       I work well both solo and in a team, and prefer using team-oriented tools
-      and patterns for all my work. This includes version control, time tracking
-      and project boards.
+      and patterns for all my work. This includes quality version control, time
+      tracking and project boards.
     </p>
   </section>
   <section>
