--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,7 @@ const sortedPosts = posts
     color: var(--color-text-1);
   }
   .posts {
-    margin-top: 80px;
+    margin-top: 16px;
   }
   .post {
     margin-top: 32px;
@@ -178,7 +178,7 @@ const sortedPosts = posts
   }
   .project-bg {
     border-radius: var(--radius);
-    width: 180px;
+    width: 144px;
     height: 200px;
     padding: 4px;
     flex: 0 0 auto;
@@ -215,6 +215,8 @@ const sortedPosts = posts
     margin: 16px 0 0 0;
   }
   .project h3 {
+    font-weight: 600;
+    font-size: 18px;
     text-align: center;
     margin-top: 0;
     margin-bottom: 8px;
@@ -252,6 +254,9 @@ const sortedPosts = posts
       right: 0;
       transform: translateY(-50%);
     }
+    .posts {
+      margin-top: 80px;
+    }
     .horizontal-scroll {
       gap: 32px;
       justify-content: space-between;
@@ -262,6 +267,7 @@ const sortedPosts = posts
     }
     .project h3 {
       margin-bottom: 16px;
+      font-size: 20px;
     }
   }
 
