--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -99,6 +99,15 @@ import Page from "../layouts/Page.astro";
     justify-content: flex-start;
     flex-direction: column;
   }
+  li img {
+    height: 80px;
+    width: 80px;
+    margin-bottom: 16px;
+    margin-top: 64px;
+  }
+  li:first-of-type img {
+    margin-top: 32px;
+  }
   div {
     margin-left: 0;
   }
@@ -115,6 +124,10 @@ import Page from "../layouts/Page.astro";
   .links {
     margin-top: 8px;
     user-select: none;
+    font-size: 16px;
+  }
+  .links a {
+    font-size: 16px;
   }
 
   @media (min-width: 600px) {
@@ -122,8 +135,16 @@ import Page from "../layouts/Page.astro";
       flex-direction: row;
       align-items: center;
     }
+    li img {
+      height: 128px;
+      width: 128px;
+      margin: 32px 0 32px 0;
+    }
     div:not(.links) {
       margin-left: 32px;
+    }
+    .links a {
+      font-size: 18px;
     }
   }
 </style>
