fix: minor typo

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -33,7 +33,7 @@ import Page from "../layouts/Page.astro";
       <img src="/images/gamesquad.webp" width={128} height={128} alt="" />
       <div>
         <h2>GameSquad</h2>
-        <p>Squad up and vote for what game to play.</p>
+        <p>Squad up and vote for what games to play.</p>
         <div class="links">
           <a class="arrow-link" href="https://gamesquad.win" target="_blank"
             >Live<Icon name="chain" /></a
