--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,6 +258,7 @@ const sortedPosts = posts
       margin-top: 80px;
     }
     .horizontal-scroll {
+      margin-inline: 16px;
       gap: 32px;
       justify-content: space-between;
     }
