--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -12,6 +12,7 @@
   --lineHeight-relaxed: 1.625;
 
   /* Spacing */
+  --page-padding: 0;
   --padding: 16px;
   --radius: 16px;
 
@@ -170,7 +171,7 @@ pre {
   margin: 32px 0 32px 0;
   padding: var(--padding);
   grid-column: full !important;
-  border-radius: 16px;
+  border-radius: 6px;
 }
 pre + p {
   margin: 0
@@ -192,11 +193,10 @@ blockquote {
   padding: var(--padding);
   border-left: 4px solid var(--color-1);
   font-size: 16px;
-  font-style: italic;
   margin-top: 32px;
   background: rgba(var(--color-1-rgb), 0.1);
-  border-top-right-radius: 16px;
-  border-bottom-right-radius: 16px;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 blockquote > :last-child {
@@ -262,7 +262,7 @@ blockquote p {
 .wrapper {
   margin: 0 16px;
   display: grid;
-      grid-template-columns: [full-start] var(--padding) [wrapper-start] minmax(32px, 932px) [wrapper-end] var(--padding) [full-end];
+      grid-template-columns: [full-start] var(--page-padding) [wrapper-start] minmax(32px, 932px) [wrapper-end] var(--page-padding) [full-end];
 }
 .wrapper > * {
   grid-column: wrapper;
@@ -306,11 +306,19 @@ blockquote p {
 
 @media (min-width: 600px) {
   :root {
+    --page-padding: 32px;
     --padding: 32px;
     --radius: 32px;
   }
   .post-title {
     font-size: 48px;
+  }
+  pre {
+    border-radius: 16px;
+  }
+  blockquote {
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
   }
   code {
     font-size: 16px;
