--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,6 +174,7 @@ const sortedPosts = posts
     justify-content: flex-start;
     align-items: center;
     gap: 16px;
+    padding-bottom: 16px;
   }
   .project-bg {
     border-radius: var(--radius);
