feat: add theme-color attribute

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -26,6 +26,7 @@ const { title, description } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="theme-color" content="#f5f4f0" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
